<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/mainTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectez_vous"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainImg"
        app:layout_constraintVertical_chainStyle="spread" />


    <ImageView
        android:id="@+id/mainImg"
        android:layout_width="191dp"
        android:layout_height="201dp"
        android:contentDescription="@string/image_main_activity"
        app:layout_constraintBottom_toTopOf="@id/mainInputMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitre"
        app:srcCompat="@drawable/user1" />


    <EditText
        android:id="@+id/mainInputMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/mainInputPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImg" />


    <EditText
        android:id="@+id/mainInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/mainInputMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainCheckBox" />


    <CheckBox
        android:id="@+id/mainCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_souvenir_de_moi"
        app:layout_constraintTop_toBottomOf="@id/mainInputPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainBtnConnexion" />


    <Button
        android:id="@+id/mainBtnConnexion"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/connexion"

        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/mainBtnInscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainCheckBox" />

    <TextView
        android:id="@+id/mainBtnInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas_de_compte_inscrivez_vous"

        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mainBtnConnexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
